[project]
name = "uniconn"
version = "0.2.0"
description = "Universal connection interface — TCP, WebSocket, KCP with post-quantum E2EE"
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pycryptodome>=3.20",
    "blake3>=1.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
kcp = [
    "kcp>=0.1.6",
]
quic = [
    "aioquic>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "cryptography>=42.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
